# chickenandbazel

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  Makefile  README.md  WORKSPACE  checksums.shasum
.github/: renovate.json
.github/workflows/: auto-tag.yml  bazel.yaml  bazel.yml  conventional-commits.yaml  just-one-silly-workflow.yml  merge-bot.yaml  release-if-tagged.yaml  release-worthy.yaml  tag-if-release-worthy.yaml
lib/: BUILD.bazel  lipo.bzl  lipo_verify_arch_wrapper.sh  pkgbuild.bzl  pkgbuild_tars.sh.tpl
lib/bazel/: workplace_status.sh
lib/python/: BUILD.bazel  release-worthy.py  weights_test.py
scripts/: BUILD.bazel  check-installs.sh
toolchains/bazelisk/: BUILD.bazel  deps.bzl  name-version-sha.bzl
toolchains/git-town/: BUILD.bazel  deps.bzl  name-version-sha.bzl
toolchains/ibazel/: BUILD.bazel  deps.bzl  name-version-sha.bzl
toolchains/lipo/: BUILD.bazel  BUILD.tpl  configure_lipo_from_system.bzl  deps.bzl  http_files.bzl  toolchain.bzl  toolchains.bzl
