load("@rules_pkg//:pkg.bzl", "pkg_tar")

# The resulting PKG should be installable by:
#
# sudo installer -pkg bazel-out/darwin-fastbuild/bin/chickenandbazel.pkg -target /

# Test this payload with:
#     bazel build //:chickenandbazel && tar tzf bazel-bin/chickenandbazel.tar
pkg_tar(
    name = "chickenandbazel",
    srcs = [
        "//scripts:check-installs.sh",
        "//toolchains/bazelisk:bazelisk.lipo",
        "//toolchains/ibazel:ibazel.lipo",
    ],
    mode = "0755",
    package_dir = "/usr/local/bin",
    symlinks = {
        "usr/local/bin/bazel": "bazelisk",
    },
)
